################################################################################

nxTools v1.1.1 (Not released):
  NEW: Extended help information for "SITE EDITPRE HELP VIEW".
  NEW: Ignore defined file extensions when calculating the file count and size of a pre.
  CHG: Updated dupe file ignore patterns.
  FIX: Debug logging function would error when reading array variables.

nxTools v1.1.0 (Feb 10, 2008):
  NEW: Dupe database format has changed; read the upgrading instructions.
  NEW: Rewrote the dupe database rebuild feature.
  NEW: The file database now includes the path for "SITE FDUPE".
  CHG: Updated SQLite to v3.5.6.
  FIX: Corrected a grammatical error in "SITE EDITPRE HELP".
  FIX: Dupe rebuilds in large directories fail because of ioFTPD's script timeout.
  FIX: Dupe rebuilds may insert an incorrect directory path.
  FIX: Dupe rebuilds were not using the logging exempts list.

nxTools v1.0.7 (Jan 6, 2008):
  CHG: Updated ignore lists to include new common directories.
  CHG: Updated SQLite to v3.5.4.
  FIX: All parent symlinks would be removed on nuke and wipe.
  FIX: Force NFO/SFV/Sample was not working properly.
  FIX: Properly terminate switches to the glob function.

nxTools v1.0.6 (Aug 20, 2007):
  NEW: Option to define the allowed sample extensions (e.g. JPG, MPG, VOB).
  NEW: Option to require the "-r" switch to recursively wipe a directory.
  CHG: Updated SQLite to v3.4.2.
  FIX: [Sections] compatibility with the new optional "share section" in ioFTPD v6.x.
  FIX: "SITE PRE" compatibility with VFS files in ioFTPD v6.x.
  FIX: "SITE RESETSTATS" the alldn statistic type would not reset.
  FIX: "SITE SIZE" and "SITE WIPE" reported zero files and directories.

nxTools v1.0.5a (Sep 12, 2006):
  FIX: Small typo in the common library that broke many things.

nxTools v1.0.5 (Sep 5, 2006):
  NEW: Aliases for SITE EDITPRE sub-commands ("section" and "group").
  NEW: Section cookie for latest race and pre symlinks.