@@ -89,15 +89,17 @@ proc ::nxTools::Dupe::UpdateDirs {command virtualPath} {
         return 1
     }
     set dirName [file tail $virtualPath]
-    set dirPath [string range $virtualPath 0 [string last "/" $virtualPath]]
+    set dirPath [file dirname $virtualPath]
+
+    # Append a slash to improve the accuracy of StrCaseEqN.
+    # For example, /Dir/Blah matches /Dir/Blah.Blah but /Dir/Blah/ does not.
+    append dirPath "/"
+    append virtualPath "/"
 
     if {$command eq "MKD"  || $command eq "RNTO"} {
         set timeStamp [clock seconds]
         DirDb eval {INSERT INTO DupeDirs(TimeStamp,UserName,GroupName,DirPath,DirName) VALUES($timeStamp,$user,$group,$dirPath,$dirName)}
     } elseif {[lsearch -sorted {RMD RNFR WIPE} $command] != -1} {
-        # Append a slash to improve the accuracy of StrCaseEqN.
-        # For example, /Dir/Blah matches /Dir/Blah.Blah but /Dir/Blah/ does not.
-        append virtualPath "/"
         DirDb eval {DELETE FROM DupeDirs WHERE StrCaseEqN(DirPath,$virtualPath,length($virtualPath)) OR (StrCaseEq(DirPath,$dirPath) AND StrCaseEq(DirName,$dirName))}
     }
     DirDb close
@@ -290,7 +292,7 @@ proc ::nxTools::Dupe::RebuildAddDir {name path} {
     }
 
     # Insert directory into database.
-    set vpath [file dirname $vpath]
+    set vpath [file dirname $vpath]; append vpath "/"
     DirDb eval {INSERT INTO DupeDirs(TimeStamp,UserName,GroupName,DirPath,DirName) \
         VALUES($stat(ctime),$userName,$groupName,$vpath,$name)}
 
@@ -324,7 +326,7 @@ proc ::nxTools::Dupe::RebuildAddFile {name path} {
     }
 
     # Insert file into database.
-    set vpath [file dirname $vpath]
+    set vpath [file dirname $vpath]; append vpath "/"
     FileDb eval {INSERT INTO DupeFiles(TimeStamp,UserName,GroupName,FilePath,FileName) \
         VALUES($stat(ctime),$userName,$groupName,$vpath,$name)}
 
