@@ -7,6 +7,7 @@ nxTools v1.1.1 (Not released):
   NEW: Ignore defined file extensions when calculating the file count and size of a pre.
   CHG: Updated dupe file ignore patterns.
   FIX: Debug logging function would error when reading array variables.
+  FIX: Dupe rebuilds did not append a trailing slash to virtual paths.
 
 nxTools v1.1.0 (Feb 10, 2008):
   NEW: Dupe database format has changed; read the upgrading instructions.
